bin/testsuite/tests/compiler/src/errors/compiler5040.swg
#global testerror "Err0523"

//#[Swag.Inline]
func toto()
{
    var res: retval = undefined
    return res
}
